# agent-actions

./: .gitignore  LICENSE  PUBLISHING.md  README.md  auth_example.db  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
agent_actions/: __init__.py  approvals.py  audit.py  context.py  db.py  decorators.py  idempotency.py  mcp.py  models.py  policies.py  redaction.py  registry.py  runtime.py  server.py
agent_actions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_agent_actions/: __init__.py  approvals.py  apps.py  audit.py  context.py  decorators.py  idempotency.py  models.py  policies.py  registry.py  runtime.py  urls.py  views.py
django_agent_actions/migrations/: 0001_initial.py
examples/: auth_app.py  basic_app.py  embedded_runtime.py  fastapi_advanced.py  support_app.py  warehouse_app.py
examples/billing/: actions.py  apps.py  settings.py  urls.py
tests/: conftest.py  settings.py  test_approval.py  test_concurrency.py  test_idempotency.py  test_policy.py  test_registry.py
