[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-actions"
version = "0.1.0"
description = "Expose safe backend actions to LLM agents via MCP and HTTP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agent", "mcp", "fastapi", "actions"]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_actions*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
