[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-actions"
dynamic = ["version"]
description = "Expose safe backend actions to LLM agents via MCP and HTTP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agent", "mcp", "fastapi", "actions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "mcp[cli]>=1.0",
]

[project.urls]
Homepage = "https://github.com/akamad007/agent-actions"
Repository = "https://github.com/akamad007/agent-actions.git"
Issues = "https://github.com/akamad007/agent-actions/issues"
Documentation = "https://github.com/akamad007/agent-actions#readme"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5.0",
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.11",
]

[tool.setuptools.dynamic]
version = { attr = "agent_actions.__version__" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_actions*"]

[tool.setuptools.package-data]
agent_actions = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I"]
