[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-agent-actions"
dynamic = ["version"]
description = "Expose safe backend actions to LLM agents as a Django app"
readme = "README.md"
    requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["llm", "agent", "django", "actions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/akamad007/agent-actions"
Repository = "https://github.com/akamad007/agent-actions.git"
Issues = "https://github.com/akamad007/agent-actions/issues"
Documentation = "https://github.com/akamad007/agent-actions#readme"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.11",
]

[tool.setuptools.dynamic]
version = { attr = "django_agent_actions.__version__" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["django_agent_actions*"]

[tool.setuptools.package-data]
django_agent_actions = ["py.typed"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I"]
